--- a/index.html
+++ b/index.html
@@ -326,17 +326,19 @@
             </div>
             <div class="swiper-slide">
                 <div class="box">
-                    <img id="myImg bala" src="images/bala.jpeg" alt="" alt="Snow" style="width:100%;max-width:300px">
-                    <h3>Hotel website</h3>
+                    <img src="images/akhil.png" alt="">
+                    <h3>Photography website</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa adipisci quisquam sunt nesciunt fugiat odit minus illum asperiores dolorum enim sint quod ipsam distinctio molestias consectetur ducimus beatae, reprehenderit exercitationem!</p>
                 </div>
-            </div> <div class="swiper-slide">
+            </div>
+            <div class="swiper-slide">
                 <div class="box">
                     <img src="images/akhil.png" alt="">
                     <h3>Photography website</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa adipisci quisquam sunt nesciunt fugiat odit minus illum asperiores dolorum enim sint quod ipsam distinctio molestias consectetur ducimus beatae, reprehenderit exercitationem!</p>
                 </div>
-            </div> <div class="swiper-slide">
+            </div>
+             <div class="swiper-slide">
                 <div class="box">
                     <img src="images/akhil.png" alt="">
                     <h3>Photography website</h3>
